add bp sensor readings

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.18.5
 	knolleary/PubSubClient@^2.8
 	arduino-libraries/NTPClient@^3.1.0
+	sparkfun/Sparkfun BMP180@^1.1.2
