--- a/app/angular.json
+++ b/app/angular.json
@@ -53,6 +53,10 @@
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
+                },
+                {
+                  "replace": "src/aws-exports.js",
+                  "with": "src/aws-exports.prod.js"
                 }
               ],
               "outputHashing": "all"
