--- a/app/.graphqlconfig.yml
+++ b/app/.graphqlconfig.yml
@@ -13,3 +13,6 @@ projects:
         region: us-west-2
         apiId: 6rlt7ahuy5fczg5ovrftxlellq
         maxDepth: 2
+extensions:
+  amplify:
+    version: 3
