--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@apollo/client": "^3.5.10",
     "apollo-angular": "^3.0.0",
+    "graphql": "^16.3.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
