--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "@angular-eslint/template-parser": "13.5.0",
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
+    "@ngxs/devtools-plugin": "^3.7.4",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.27.1",
