add login button for okta auth

--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,8 @@
     "@angular/router": "~13.3.0",
     "@apollo/client": "^3.5.10",
     "@ngxs/store": "^3.7.3",
-    "@okta/okta-auth-js": "^6.3.0",
+    "@okta/okta-angular": "^5.2.0",
+    "@okta/okta-auth-js": "^6.7.1",
     "apollo-angular": "^3.0.0",
     "graphql": "^16.3.0",
     "rxjs": "~7.4.0",
