--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng serve --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "prebuild": "ng lint && ng test --code-coverage"
   },
   "private": true,
   "dependencies": {
