clean up unused imports

--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -34,8 +34,12 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ]
-      }
+        ],
+        "unused-imports/no-unused-imports": "error"
+      },
+      "plugins": [
+        "unused-imports"
+      ]
     },
     {
       "files": [
